@@ -1,5 +1,6 @@
 CHANGES IN VERSION 1.7.1
 ------------------------
+ o fixed extracting ID type from TxDb object, since the change of metadata(TxDb). now using grep to extract. <2015-10-27, Tue>
  o add vp parameter to set viewport of vennpie on top of upsetplot by user request <2015-10-26, Mon>
    + see http://ygc.name/2015/07/28/upsetplot-in-chipseeker/#comment-19470
  o getBioRegion function <2015-10-20, Tue>
